--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							</div>
 							<div class="col-lg-6 text-md-center">
 								<figure class="hero-image">
-									<img src="/h.JPG" alt="5">
+									<img src="img/portfolio/h.JPG" alt="profile pic">
 								</figure>
 							</div>
 						</div>
