--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							</div>
 							<div class="col-lg-6 text-md-center">
 								<figure class="hero-image">
-									<img src="img/portfolio/h.JPG" alt="profile pic">
+									<a href="img/portfolio/h.jpg" class="set-bg port-pic" data-setbg="img/portfolio/h.jpg"></a>
 								</figure>
 							</div>
 						</div>
