--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							</div>
 							<div class="col-lg-6 text-md-center">
 								<figure class="hero-image">
-									<img src="/img/portfolio/j.jpg" alt=Ayesha>
+									<img src="/img/portfolio/h.jpg" alt="Ayesha">
 								</figure>
 							</div>
 						</div>
