--- a/index.html
+++ b/index.html
@@ -139,6 +139,24 @@
                                     Qt cross platform was used.<br></p>
                             </p>
 							</li>
+					<li>
+								<h2>2019-Febrauary</h2>
+								<!-- <h3>Web Design Company</h3> -->
+								<h4>Industrial tarining project</h4>
+                                <p><b><em>Hotel Website</b></em><br>
+                                    The project is about hotel online ordering web system where a customer can login and order type of food and quantity based on his/her interest.
+				The project is designed using Angular js as front end and Node js is used in Backend with MonoDB as a Database.<br></p>
+                            </p>
+							</li>
+			<li>
+								<h2>2020-March</h2>
+								<!-- <h3>Web Design Company</h3> -->
+								<h4>Mini project</h4>
+                                <p><b><em>Emotion detection using Artificial Intelligence</b></em><br>
+                                   Developed this project to detect the current emotion of the human and to recommend some videos to watch in order to make their mood better such as if a person is sad,<br> he will be made to watch some motivational videos. 
+					The project was designed using Python and Deep Learning using flask frame work<br></p>
+                            </p>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -160,7 +178,7 @@
 								<h3>Bachelor of Computer Science Engg.</h3>
 								<h4>Siddaganga Institue of Technology,Tumkur</h4>
 								<!-- <p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p> -->
-                            <h5><b>CGPA:</b>9.52</h5>
+                            <h5><b>CGPA:</b>8.52</h5>
                             </li>
 							<li>
 								<h2>2015</h2>
@@ -366,16 +384,16 @@
 		</section>
 		<!-- Contact section end -->
 
-		<!-- Footer section start -->
+		<!-- Footer section start 
 		<footer class="footer-section">
 			<div class="container text-center">
-				<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. 
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
 </div>
 			</div>
 		</footer>
-		<!-- Footer section end -->
+		Footer section end -->
 	</div>
 
 
